--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -79,54 +79,63 @@
 
   "item.nukacraft.frame_item": "§3Power Armor Frame",
   "item.nukacraft.jetpack": "Jetpack",
+
   "item.nukacraft.t45_helmet": "T-45 Helmet",
-  "item.nukacraft.t45_body": "T-45 Body",
+  "item.nukacraft.t45_torso": "T-45 Body",
   "item.nukacraft.t45_right_arm": "T-45 Right Arm",
   "item.nukacraft.t45_left_arm": "T-45 Left Arm",
   "item.nukacraft.t45_right_leg": "T-45 Right Leg",
   "item.nukacraft.t45_left_leg": "T-45 Left Leg",
+
   "item.nukacraft.t51_helmet": "§bT-51 Helmet",
-  "item.nukacraft.t51_body": "§bT-51 Body",
+  "item.nukacraft.t51_torso": "§bT-51 Body",
   "item.nukacraft.t51_right_arm": "§bT-51 Right Arm",
   "item.nukacraft.t51_left_arm": "§bT-51 Left Arm",
   "item.nukacraft.t51_right_leg": "§bT-51 Right Leg",
   "item.nukacraft.t51_left_leg": "§bT-51 Left Leg",
+
   "item.nukacraft.t60_helmet": "§eT-60 Helmet",
-  "item.nukacraft.t60_body": "§eT-60 Body",
+  "item.nukacraft.t60_torso": "§eT-60 Body",
   "item.nukacraft.t60_right_arm": "§eT-60 Right Arm",
   "item.nukacraft.t60_left_arm": "§eT-60 Left Arm",
   "item.nukacraft.t60_right_leg": "§eT-60 Right Leg",
   "item.nukacraft.t60_left_leg": "§eT-60 Left Leg",
+
   "item.nukacraft.x01_helmet": "§cX-01 Helmet★★",
-  "item.nukacraft.x01_body": "§cX-01 Body★★",
+  "item.nukacraft.x01_torso": "§cX-01 Body★★",
   "item.nukacraft.x01_right_arm": "§cX-01 Right Arm★★",
   "item.nukacraft.x01_left_arm": "§cX-01 Left Arm★★",
   "item.nukacraft.x01_right_leg": "§cX-01 Right Leg★★",
   "item.nukacraft.x01_left_leg": "§cX-01 Left Leg★★",
+
   "item.nukacraft.x02_helmet": "§cX-02 Helmet★★",
-  "item.nukacraft.x02_body": "§cX-02 Body★★",
+  "item.nukacraft.x02_torso": "§cX-02 Body★★",
   "item.nukacraft.x02_right_arm": "§cX-02 Right Arm★★",
   "item.nukacraft.x02_left_arm": "§cX-02 Left Arm★★",
   "item.nukacraft.x02_right_leg": "§cX-02 Right Leg★★",
   "item.nukacraft.x02_left_leg": "§cX-02 Left Leg★★",
+
   "item.nukacraft.x02_cryo_helmet": "§6X-02 Cryo Helmet★★★",
-  "item.nukacraft.x02_cryo_body": "§6X-02 Cryo Body★★★",
+  "item.nukacraft.x02_cryo_torso": "§6X-02 Cryo Body★★★",
   "item.nukacraft.x02_cryo_right_arm": "§6X-02 Cryo Right Arm★★★",
   "item.nukacraft.x02_cryo_left_arm": "§6X-02 Cryo Left Arm★★★",
   "item.nukacraft.x02_cryo_right_leg": "§6X-02 Cryo Right Leg★★★",
   "item.nukacraft.x02_cryo_left_leg": "§6X-02 Cryo Left Leg★★★",
+
   "item.nukacraft.raider_helmet": "Raider Helmet",
-  "item.nukacraft.raider_body": "Raider Body",
+  "item.nukacraft.raider_torso": "Raider Body",
   "item.nukacraft.raider_right_arm": "Raider Right Arm",
   "item.nukacraft.raider_left_arm": "Raider Left Arm",
   "item.nukacraft.raider_right_leg": "Raider Right Leg",
   "item.nukacraft.raider_left_leg": "Raider Left Leg",
-  "item.nukacraft.exc_helmet": "§bExcavator Helmet",
-  "item.nukacraft.exc_body": "§bExcavator Body",
-  "item.nukacraft.exc_right_arm": "§bExcavator Right Arm",
-  "item.nukacraft.exc_left_arm": "§bExcavator Left Arm",
-  "item.nukacraft.exc_right_leg": "§bExcavator Right Leg",
-  "item.nukacraft.exc_left_leg": "§bExcavator Left Leg",
+
+  "item.nukacraft.excavator_helmet": "§bExcavator Helmet",
+  "item.nukacraft.excavator_torso": "§bExcavator Body",
+  "item.nukacraft.excavator_right_arm": "§bExcavator Right Arm",
+  "item.nukacraft.excavator_left_arm": "§bExcavator Left Arm",
+  "item.nukacraft.excavator_right_leg": "§bExcavator Right Leg",
+  "item.nukacraft.excavator_left_leg": "§bExcavator Left Leg",
+
   "item.nukacraft.inda_abraxo_cleaner": "Industrial Abraxo Cleaner",
   "item.nukacraft.quartz_divider": "§aQuartz Divider★",
   "item.nukacraft.piezonucleic_divider": "§6Piezonucleic Divider★★★",
