--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -87,53 +87,53 @@
   "item.nukacraft.frame_item": "§3Каркас Силовой Брони",
   "item.nukacraft.jetpack": "Реактивный Ранец",
   "item.nukacraft.t45_helmet": "Шлем T-45",
-  "item.nukacraft.t45_body": "Нагрудник T-45",
+  "item.nukacraft.t45_torso": "Нагрудник T-45",
   "item.nukacraft.t45_right_arm": "Правая Рука T-45",
   "item.nukacraft.t45_left_arm": "Левая Рука T-45",
   "item.nukacraft.t45_right_leg": "Права Нога T-45",
   "item.nukacraft.t45_left_leg": "Левая Нога T-45",
   "item.nukacraft.t51_helmet": "§bШлем T-51",
-  "item.nukacraft.t51_body": "§bНагрудник T-51",
+  "item.nukacraft.t51_torso": "§bНагрудник T-51",
   "item.nukacraft.t51_right_arm": "§bПравая Рука T-51",
   "item.nukacraft.t51_left_arm": "§bЛевая Рука T-51",
   "item.nukacraft.t51_right_leg": "§bПравая Нога T-51",
   "item.nukacraft.t51_left_leg": "§bЛевая Нога T-51",
   "item.nukacraft.t60_helmet": "§eШлем T-60",
-  "item.nukacraft.t60_body": "§eНагрудник T-60",
+  "item.nukacraft.t60_torso": "§eНагрудник T-60",
   "item.nukacraft.t60_right_arm": "§eПравая Рука T-60",
   "item.nukacraft.t60_left_arm": "§eЛевая Рука T-60",
   "item.nukacraft.t60_right_leg": "§eПравая Нога T-60",
   "item.nukacraft.t60_left_leg": "§eЛевая Нога T-60",
   "item.nukacraft.x01_helmet": "§cШлем X-01★★",
-  "item.nukacraft.x01_body": "§cНагрудник X-01★★",
+  "item.nukacraft.x01_torso": "§cНагрудник X-01★★",
   "item.nukacraft.x01_right_arm": "§cПравая РукаX-01★★",
   "item.nukacraft.x01_left_arm": "§cЛевая Рука X-01★★",
   "item.nukacraft.x01_right_leg": "§cПравая Нога X-01★★",
   "item.nukacraft.x01_left_leg": "§cЛевая Нога X-01★★",
   "item.nukacraft.x02_helmet": "§cШлем X-02★★",
-  "item.nukacraft.x02_body": "§cНагрудник X-02★★",
+  "item.nukacraft.x02_torso": "§cНагрудник X-02★★",
   "item.nukacraft.x02_right_arm": "§cПравая Рука X-02★★",
   "item.nukacraft.x02_left_arm": "§cЛевая Рука X-02★★",
   "item.nukacraft.x02_right_leg": "§cПравая Нога X-02★★",
   "item.nukacraft.x02_left_leg": "§cЛевая Нога X-02★★",
   "item.nukacraft.x02_cryo_helmet": "§6Шлем 'Крио' X-02★★★",
-  "item.nukacraft.x02_cryo_body": "§6Нагрудник 'Крио' X-02★★★",
+  "item.nukacraft.x02_cryo_torso": "§6Нагрудник 'Крио' X-02★★★",
   "item.nukacraft.x02_cryo_right_arm": "§6Правая Рука 'Крио' X-02★★★",
   "item.nukacraft.x02_cryo_left_arm": "§6Левая Рука 'Крио' X-02★★★",
   "item.nukacraft.x02_cryo_right_leg": "§6Правая Нога 'Крио' X-02★★★",
   "item.nukacraft.x02_cryo_left_leg": "§6Левая Нога 'Крио' X-02★★★",
   "item.nukacraft.raider_helmet": "Рейдерский Шлем",
-  "item.nukacraft.raider_body": "Рейдерский Нагрудник",
+  "item.nukacraft.raider_torso": "Рейдерский Нагрудник",
   "item.nukacraft.raider_right_arm": "Рейдерская Правая Рука",
   "item.nukacraft.raider_left_arm": "Рейдерская Левая Рука",
   "item.nukacraft.raider_right_leg": "Рейдерская Правая Нога",
   "item.nukacraft.raider_left_leg": "Рейдерская Левая Нога",
-  "item.nukacraft.exc_helmet": "§bШлем Экскаватора",
-  "item.nukacraft.exc_body": "§bНагрудник Экскаватора",
-  "item.nukacraft.exc_right_arm": "§bПравая Рука Экскаватора",
-  "item.nukacraft.exc_left_arm": "§bЛевая Рука Экскаватора",
-  "item.nukacraft.exc_right_leg": "§bПравая Нога Экскаватора",
-  "item.nukacraft.exc_left_leg": "§bЛевая Нога Экскаватора",
+  "item.nukacraft.excavator_helmet": "§bШлем Экскаватора",
+  "item.nukacraft.excavator_torso": "§bНагрудник Экскаватора",
+  "item.nukacraft.excavator_right_arm": "§bПравая Рука Экскаватора",
+  "item.nukacraft.excavator_left_arm": "§bЛевая Рука Экскаватора",
+  "item.nukacraft.excavator_right_leg": "§bПравая Нога Экскаватора",
+  "item.nukacraft.excavator_left_leg": "§bЛевая Нога Экскаватора",
   "item.nukacraft.combatknife": "Боевой Нож",
   "item.nukacraft.cosmicknife": "Космический Нож",
   "item.nukacraft.scrap": "Металлолом",
