--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -640,5 +640,7 @@
 
   "skin.default" : "§7§oDefault",
   "skin.rust" : "§7§oRusty",
-  "itemGroup.power_armor": "NukaCraft: Power Armor"
+  "itemGroup.power_armor": "NukaCraft: Power Armor",
+
+  "entity.nukacraft.power_armor_frame": ""
 }
