Fix langs files, textures

--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -26,13 +26,13 @@
   "item.nukacraft.leg_weapon_parts": "§cSpecial Weapon Parts★★",
   "item.nukacraft.myth_weapon_parts": "§6Illegal Weapon Parts★★★",
   "item.nukacraft.dcleather": "Deathclaw Leather",
-  "item.nukacraft.raw_dcmeat": "Raw Deathclaw Meat",
-  "item.nukacraft.raw_radroachmeat": "Raw Radroach Meat",
-  "item.nukacraft.c_radroachmeat": "Cooked Radroach Meat",
-  "item.nukacraft.c_dcmeat": "Cooked Deathclaw Meat",
-  "item.nukacraft.raw_brahminmeat": "Raw Brahmin Meat",
+  "item.nukacraft.raw_deadclaw_meat": "Raw Deathclaw Meat",
+  "item.nukacraft.raw_radroach_meat": "Raw Radroach Meat",
+  "item.nukacraft.cooked_radroach_meat": "Cooked Radroach Meat",
+  "item.nukacraft.cooked_deadclaw_meat": "Cooked Deathclaw Meat",
+  "item.nukacraft.raw_brahmin_meat": "Raw Brahmin Meat",
   "item.nukacraft.deathclaw": "Deathclaw Hand",
-  "item.nukacraft.c_brahminmeat": "Cooked Brahmin Meat",
+  "item.nukacraft.cooked_brahmin_meat": "Cooked Brahmin Meat",
 
   "item.nukacraft.abraxo_cleaner": "Abraxo Cleaner",
   "item.nukacraft.army_circuit": "Military-grade Circuit",
@@ -77,7 +77,7 @@
   "item.nukacraft.combatpipe": "Lead Pipe",
   "item.nukacraft.fusion_core": "Fusion Core",
 
-  "item.nukacraft.frame_item": "§3Power Armor Frame",
+  "item.nukacraft.power_armor_frame": "§3Power Armor Frame",
   "item.nukacraft.jetpack": "Jetpack",
 
   "item.nukacraft.t45_helmet": "T-45 Helmet",
@@ -139,32 +139,32 @@
   "item.nukacraft.inda_abraxo_cleaner": "Industrial Abraxo Cleaner",
   "item.nukacraft.quartz_divider": "§aQuartz Divider★",
   "item.nukacraft.piezonucleic_divider": "§6Piezonucleic Divider★★★",
-  "item.nukacraft.nukacola": "Nuka Cola",
-  "item.nukacraft.nukafrutti": "Nuka Frutti",
+  "item.nukacraft.nuka_cola": "Nuka Cola",
+  "item.nukacraft.nuka_frutti": "Nuka Frutti",
   "item.nukacraft.crackberry": "Firecracker Berry",
   "item.nukacraft.bombberry": "Bomb Berry",
   "item.nukacraft.muttfruit": "Mutfruit",
-  "item.nukacraft.fusionfruit": "Fusion Fruit",
+  "item.nukacraft.fusion_fruit": "Fusion Fruit",
   "item.nukacraft.silt_bean": "Silt Bean",
-  "item.nukacraft.neutronpod": "Neutron Rod",
-  "item.nukacraft.wildtato": "Tato",
+  "item.nukacraft.neutron_rod": "Neutron Rod",
+  "item.nukacraft.wild_tato": "Tato",
   "item.nukacraft.cranberry": "Cranberry",
   "item.nukacraft.quantumleaf": "Quantleaf",
-  "item.nukacraft.gammaleaf": "Gammaleaf",
+  "item.nukacraft.gamma_leaf": "Gammaleaf",
   "item.nukacraft.daturan_root": "Daturan Root",
   "item.nukacraft.agave_fruit": "Agave Fruit",
   "item.nukacraft.neoagave_fruit": "Neoagave Fruit",
   "item.nukacraft.ginsengroot": "Ginseng Root",
   "item.nukacraft.punga_fruit": "Punga Fruit",
-  "item.nukacraft.applesp": "Dandy Boy Apples",
+  "item.nukacraft.dandy_boy_apples": "Dandy Boy Apples",
   "item.nukacraft.cram": "Cram",
   "item.nukacraft.chips": "Potato Crisps",
-  "item.nukacraft.fcakes": "Fancy Lads Snack Cakes",
-  "item.nukacraft.maccheese": "BlamCo Mac & Cheese",
+  "item.nukacraft.cakes": "Fancy Lads Snack Cakes",
+  "item.nukacraft.blamco": "BlamCo Mac & Cheese",
   "item.nukacraft.pures": "InstaMash",
-  "item.nukacraft.cottoncandy": "Cotton Candy Bites",
-  "item.nukacraft.starberry": "Starlight Berry",
-  "item.nukacraft.bubbleapple": "Apple Bubblegum",
+  "item.nukacraft.cotton_candy": "Cotton Candy Bites",
+  "item.nukacraft.starlight_berry": "Starlight Berry",
+  "item.nukacraft.bubble_apple": "Apple Bubblegum",
   "item.nukacraft.watercola": "Water Cola Bottle",
   "item.nukacraft.aster_tea": "Aster Tea",
   "item.nukacraft.ash_tea": "Ash Rose Tea",
@@ -186,7 +186,7 @@
   "item.nukacraft.super_stimpak": "Super Stimpak",
   "item.nukacraft.thistle_tea": "Thistle Tea",
   "item.nukacraft.soot_tea": "Soot Tea",
-  "item.nukacraft.vegsoup": "Vegetable Soup",
+  "item.nukacraft.vegetable_soup": "Vegetable Soup",
   "item.nukacraft.tato_salad": "Tato Salad",
   "item.nukacraft.silt_soup": "Silt Soup",
   "item.nukacraft.silt_puree": "Silt Puree",
@@ -203,14 +203,14 @@
   "item.nukacraft.magazine_t3": "§cTier 3 Magazine★★",
   "item.nukacraft.alumi_ingot": "Aluminium Ingot",
   "item.nukacraft.aluminugget": "Aluminium Nugget",
-  "item.nukacraft.bbloodleafl": "Black BloodLeaf",
+  "item.nukacraft.bbloodleaf": "Black BloodLeaf",
   "item.nukacraft.nukaroot": "Nuka Root",
   "item.nukacraft.coral_leaf": "Coral Leaves",
-  "item.nukacraft.prism_leafs": "Prisma Leaves",
+  "item.nukacraft.prism_leaf": "Prisma Leaves",
   "item.nukacraft.spoiled_tato": "Spoiled Tato",
-  "item.nukacraft.irrad_beetroot": "Irradiated Beetroot",
+  "item.nukacraft.irradiated_beetroot": "Irradiated Beetroot",
   "item.nukacraft.beerempty": "Empty Beer Bottle",
-  "item.nukacraft.ufcarrot": "Ultraviolet Carrot",
+  "item.nukacraft.ultraviolet_carrot": "Ultraviolet Carrot",
   "item.nukacraft.brainfungus": "Brain Fungus",
   "item.nukacraft.black_titan": "Black Titan Ingot",
   "item.nukacraft.raw_alumi": "Raw Aluminium",
@@ -251,9 +251,9 @@
   "item.nukacraft.leadnugget": "Lead Nugget",
   "item.nukacraft.leadplate": "Lead Plate",
   "item.nukacraft.bbloodleafl_": "Black Bloodleaf Bush",
-  "item.nukacraft.nbloodleafi_": "Bloodleaf Bush",
+  "item.nukacraft.blood_leaf_bush": "Bloodleaf Bush",
   "item.nukacraft.quantumleaf_": "Quantleaf Bush",
-  "item.nukacraft.gammaleaf_": "Gammaleaf Bush",
+  "item.nukacraft.gamma_leaf_bush": "Gammaleaf Bush",
   "item.nukacraft.old_scope": "Old Scope",
   "item.nukacraft.hunting_scope": "Hunting Scope",
   "item.nukacraft.old_silencer": "Old Silencer",
@@ -295,7 +295,7 @@
   "item.nukacraft.ultracite": "Ultracite Crystal",
   "item.nukacraft.blackflux": "Black Flux",
   "item.nukacraft.gigawheat": "Gigagrain",
-  "item.nukacraft.gigawheat_seeds": "Gigagrain Seeds",
+  "item.nukacraft.giga_wheat_seeds": "Gigagrain Seeds",
   "item.nukacraft.mindfungus": "Enlightened Fungus",
   "item.nukacraft.ultrbar": "Ultracite Stabilizer",
   "item.nukacraft.uranrod": "Uranium Rod",
@@ -404,7 +404,7 @@
   "block.nukacraft.writtingdesk1": "Writting Desk",
   "block.nukacraft.writtingdesk2": "Writting Desk",
   "block.nukacraft.writtingdesk3": "Writting Desk",
-  "block.nukacraft.vaultblastdoor": "Vault Gateway",
+  "block.nukacraft.vault_blast_door": "Vault Gateway",
   "block.nukacraft.vtlattice": "Lattice",
   "block.nukacraft.strippeddwood": "Stripped Dogwood",
   "block.nukacraft.barrel": "Radioactive Barrel",
@@ -415,7 +415,7 @@
   "block.nukacraft.rustsupportwall": "Support Crossbar",
   "block.nukacraft.rustsupporttop": "Support Crossbar",
   "block.nukacraft.rustsupportwalltop": "Support Crossbar",
-  "block.nukacraft.ruststeel_bars": "Vault-Tec Bars",
+  "block.nukacraft.rusty_steel_bars": "Vault-Tec Bars",
   "block.nukacraft.mosswhitebricks_stairs": "Mossy White Brick Stairs",
   "block.nukacraft.crackedwhitebricks_stairs": "Cracked White Brick Stairs",
   "block.nukacraft.shelterfloor": "Shelter Floor",
@@ -433,7 +433,7 @@
   "block.nukacraft.black_titan_ore": "Black Titan Ore",
   "block.nukacraft.black_titan_block": "Black Titan Block",
   "block.nukacraft.ultracite_block": "Ultracite Block",
-  "block.nukacraft.deepultracite_block": "Deepslate Ultracite Ore",
+  "block.nukacraft.deep_ultracite_block": "Deepslate Ultracite Ore",
   "block.nukacraft.ultracite_ore": "Ultracite Ore",
   "block.nukacraft.wbarnplanks": "White Barn Planks",
   "block.nukacraft.blacksteel": "Black Steel",
@@ -463,6 +463,8 @@
   "block.nukacraft.whitesteel_column": "White Steel Column",
   "block.nukacraft.brown_tile": "Brown Tiles",
   "block.nukacraft.yellow_steel": "Yellow Steel",
+  "block.nukacraft.toilet": "Toilet",
+  "block.nukacraft.goldtoilet": "§6Gold Toilet★★★",
   "block.nukacraft.yellow_steel_column": "Yellow Steel Column",
   "block.nukacraft.scrapmetall": "Scrap Block",
   "block.nukacraft.rusttiresblock": "Rust Cage Block",
@@ -542,7 +544,7 @@
   "block.nukacraft.cranberrygrass": "Cranberry Sprouts",
   "block.nukacraft.glow_grass": "Glow Grass",
   "block.nukacraft.redrocketpanel": "Red Rocket Panel",
-  "block.nukacraft.bloodleaf": "Bloodleaf Bush",
+  "block.nukacraft.blood_leaf": "Bloodleaf Bush",
   "block.nukacraft.qbloodleaf": "Quantleaf Bush",
   "block.nukacraft.gbloodleaf": "Gammaleaf Bush",
   "block.nukacraft.bbloodleaf": "Black Bloodleaf Bush",
