--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -26,7 +26,7 @@
   "block.nukacraft.writtingdesk1": "Письменный Стол",
   "block.nukacraft.writtingdesk2": "Письменный Стол",
   "block.nukacraft.writtingdesk3": "Письменный Стол",
-  "block.nukacraft.vaultblastdoor": "Шлюз Убежища",
+  "block.nukacraft.vault_blast_door": "Шлюз Убежища",
   "block.nukacraft.dewdrop": "Отросток Росянки",
   "block.nukacraft.cranberryleaves": "Листва Росянки",
   "block.nukacraft.cranberrywood": "Древесина Росянки",
@@ -41,7 +41,13 @@
   "block.nukacraft.rustsupportwall": "Опора Убежища",
   "block.nukacraft.rustsupporttop": "Опора Убежища",
   "block.nukacraft.rustsupportwalltop": "Опора Убежища",
-  "block.nukacraft.ruststeel_bars": "Решётка Волт-Тек",
+  "item.nukacraft.glowfungus": "Светящиеся Грибы",
+  "item.nukacraft.mutshootfungus": "Светящийся Гриб Мутострел",
+  "item.nukacraft.megamorph_hatter": "Мегаморфный Гриб Шляпник",
+  "item.nukacraft.hatter": "Гриб Шляпник",
+  "block.nukacraft.rusty_steel_bars": "Решётка Волт-Тек",
+  "block.nukacraft.toilet": "Унитаз",
+  "block.nukacraft.goldtoilet": "§6Золотой Унитаз★★★",
   "block.nukacraft.mosswhitebricks_stairs": "Замшелые Белые Кирпичные Ступеньки",
   "block.nukacraft.crackedwhitebricks_stairs": "Потрескавшиеся Белые Кирпичные Ступеньки",
   "block.nukacraft.shelterfloor": "Пол Убежища",
@@ -49,7 +55,7 @@
   "item.nukacraft.cleaver": "Секач",
   "block.nukacraft.acid_dirt": "Кислотная Земля",
   "block.nukacraft.ash_stone": "Пепельный Камень",
-  "block.nukacraft.geardoor": "Дверь Vault-Tec",
+  "block.nukacraft.geardoor": "Дверь Волт-Тек",
   "block.nukacraft.filler_barrier": "Блок Заполнитель",
   "block.nukacraft.half_barrier": "Плита Заполнитель",
   "block.nukacraft.shelter_lamp": "Лампа Волт-Тек",
@@ -67,14 +73,14 @@
   "item.nukacraft.myth_weapon_parts": "§6Запрещенные Оружейные Части★★★",
   "item.nukacraft.baseball_grenade": "Бейбольная Граната",
   "item.nukacraft.dcleather": "Кожа Когтя Смерти",
-  "item.nukacraft.raw_dcmeat": "Сырое Мясо Когтя Смерти",
-  "item.nukacraft.c_dcmeat": "Стейк из Когтя Смерти",
-  "item.nukacraft.raw_radroachmeat": "Сырое Мясо Радтаракана",
-  "item.nukacraft.c_radroachmeat": "Стейк из Радтаракана",
+  "item.nukacraft.raw_deadclaw_meat": "Сырое Мясо Когтя Смерти",
+  "item.nukacraft.cooked_deadclaw_meat": "Стейк из Когтя Смерти",
+  "item.nukacraft.raw_radroach_meat": "Сырое Мясо Радтаракана",
+  "item.nukacraft.cooked_radroach_meat": "Стейк из Радтаракана",
   "item.nukacraft.trapper_helmet": "Шлем Траппера",
   "item.nukacraft.trapper_chest": "Нагрудник Траппера",
-  "item.nukacraft.raw_brahminmeat": "Сырое Мясо Брамина",
-  "item.nukacraft.c_brahminmeat": "Стейк из Брамина",
+  "item.nukacraft.raw_brahmin_meat": "Сырое Мясо Брамина",
+  "item.nukacraft.cooked_brahmin_meat": "Стейк из Брамина",
   "item.nukacraft.deathclaw": "Лапа Когтя Смерти",
   "item.nukacraft.trapper_leggins": "Поножи Траппера",
   "item.nukacraft.trapper_boots": "Ботинки Траппера",
@@ -84,7 +90,7 @@
   "item.nukacraft.metal_boots": "Металлические Ботинки",
   "item.nukacraft.fusion_core": "Ядерный Блок",
   "item.nukacraft.combatpipe": "Свинцовый Стояк",
-  "item.nukacraft.frame_item": "§3Каркас Силовой Брони",
+  "item.nukacraft.power_armor_frame": "§3Каркас Силовой Брони",
   "item.nukacraft.jetpack": "Реактивный Ранец",
   "item.nukacraft.t45_helmet": "Шлем T-45",
   "item.nukacraft.t45_torso": "Нагрудник T-45",
@@ -106,7 +112,7 @@
   "item.nukacraft.t60_left_leg": "§eЛевая Нога T-60",
   "item.nukacraft.x01_helmet": "§cШлем X-01★★",
   "item.nukacraft.x01_torso": "§cНагрудник X-01★★",
-  "item.nukacraft.x01_right_arm": "§cПравая РукаX-01★★",
+  "item.nukacraft.x01_right_arm": "§cПравая Рука X-01★★",
   "item.nukacraft.x01_left_arm": "§cЛевая Рука X-01★★",
   "item.nukacraft.x01_right_leg": "§cПравая Нога X-01★★",
   "item.nukacraft.x01_left_leg": "§cЛевая Нога X-01★★",
@@ -179,8 +185,8 @@
   "item.nukacraft.magazine_t3": "§cМагазин 3 Уровня★★",
   "item.nukacraft.coral_leaf": "Коралловые Листья",
   "item.nukacraft.spoiled_tato": "Тухлая Тошка",
-  "item.nukacraft.irrad_beetroot": "Облучённая Свекла",
-  "item.nukacraft.prism_leafs": "Призма Листья",
+  "item.nukacraft.irradiated_beetroot": "Облучённая Свекла",
+  "item.nukacraft.prism_leaf": "Призма Листья",
   "item.nukacraft.purple_reagent": "Пурпурный Реагент",
   "item.nukacraft.round10mm": "Патрон 10мм",
   "item.nukacraft.round45": ".45 Патрон",
@@ -207,7 +213,7 @@
   "item.nukacraft.gold_cranberry": "Золотая Клюква",
   "item.nukacraft.nukamelon_piece": "Ломтик Мегатонн-Арбуза",
   "block.nukacraft.irrad_beetroots": "Семена Облучённой Свеклы",
-  "item.nukacraft.ufcarrot": "Ультрафиолетовая Морковь",
+  "item.nukacraft.ultraviolet_carrot": "Ультрафиолетовая Морковь",
   "item.nukacraft.raw_black_titan": "Рудный Черный Титан",
   "item.nukacraft.raw_uran": "Рудный Уран",
   "block.nukacraft.uranium_ore": "Блок Урановой Руды",
@@ -220,22 +226,22 @@
   "block.nukacraft.bluesteel": "Синяя Сталь",
   "block.nukacraft.deepslate_saturnite": "Сатурнитоносный Глубинный Сланец",
   "item.nukacraft.bbloodleafl_": "Росток Чёрного Кроволиста",
-  "item.nukacraft.nbloodleafi_": "Росток Кроволиста",
+  "item.nukacraft.blood_leaf_bush": "Росток Кроволиста",
   "item.nukacraft.quantumleaf_": "Росток Квантового Листа",
-  "item.nukacraft.gammaleaf_": "Росток Гамма Листа",
+  "item.nukacraft.gamma_leaf_bush": "Росток Гамма Листа",
   "item.nukacraft.pipboy": "Пип-Бой",
   "block.nukacraft.nukamelon": "Мегатонн-Арбуз",
   "item.nukacraft.raw_silver": "Рудное Серебро",
   "item.nukacraft.raw_lead": "Рудный Свинец",
   "item.nukacraft.blackflux": "Чёрный Флюс",
   "item.nukacraft.gigawheat": "Гигазерно",
-  "item.nukacraft.gigawheat_seeds": "Семена Гигазерна",
+  "item.nukacraft.giga_wheat_seeds": "Семена Гигазерна",
   "item.nukacraft.reducer": "Редуктор",
   "block.nukacraft.deepalumi_block": "Алюминиевоносный Глубинный Сланец",
   "block.nukacraft.deeplead_block": "Свинцово Глубинный Сланец",
   "item.nukacraft.mindfungus": "Просвещённый гриб",
   "block.nukacraft.deepsilver_block": "Сереброносный Глубинный Сланец",
-  "item.nukacraft.bbloodleafl": "Чёрный Кроволист",
+  "item.nukacraft.bbloodleaf": "Чёрный Кроволист",
   "item.nukacraft.beerempty": "Пустая Пивная Бутылка",
   "item.nukacraft.brainfungus": "Мозгогриб",
   "item.nukacraft.black_titan": "Слиток Чёрного Титана",
@@ -327,7 +333,7 @@
   "block.nukacraft.black_titan_ore": "Руда Чёрного Титана",
   "block.nukacraft.black_titan_block": "Блок Чёрного Титана",
   "block.nukacraft.ultracite_block": "Блок Ультрацита",
-  "block.nukacraft.deepultracite_block": "Ультрацитоносный Глубинный Сланец",
+  "block.nukacraft.deep_ultracite_block": "Ультрацитоносный Глубинный Сланец",
   "block.nukacraft.deep_black_titan_block": "Чёрный Титаноносный Глубинный Сланец",
   "block.nukacraft.ultracite_ore": "Ультрацитовая Руда",
   "block.nukacraft.wbarnplanks": "Белые Амбарныe Доски",
@@ -434,7 +440,7 @@
   "nukacraft_radiation": "Радиация",
   "effect.nukacraft.quant_shield": "§6Квант Щит",
   "effect.nukacraft.rad_res": "Рад-Защита",
-  "item.nukacraft.nukacola": "Ядер Кола",
+  "item.nukacraft.nuka_cola": "Ядер Кола",
   "item.nukacraft.crackberry": "Ягода-Хлопушка",
   "item.nukacraft.bombberry": "Бомбо-Ягода",
   "item.nukacraft.muttfruit": "Мутафрукт",
@@ -451,36 +457,36 @@
   "item.nukacraft.leather_boots": "Кожанные Ботинки",
   "block.nukacraft.radioterminal": "Терминал Связи",
   "block.nukacraft.shelter_bars": "Решётка Волт-Тек",
-  "item.nukacraft.fusionfruit": "Расплавленный Фрукт",
+  "item.nukacraft.fusion_fruit": "Расплавленный Фрукт",
   "item.nukacraft.silt_bean": "Стручок Илофасоли",
-  "block.nukacraft.bloodleaf": "Куст Кроволиста",
+  "block.nukacraft.blood_leaf_bush": "Куст Кроволиста",
   "block.nukacraft.bbloodleaf": "Куст Чёрного Кроволиста",
-  "item.nukacraft.wildtato": "Тошка",
+  "item.nukacraft.wild_tato": "Тошка",
+  "item.nukacraft.steelbowl": "Стальная Миска",
   "item.nukacraft.cranberry": "Клюква",
   "item.nukacraft.quantumleaf": "Квантовый Лист",
-  "item.nukacraft.gammaleaf": "Гамма Лист",
+  "item.nukacraft.gamma_leaf": "Гамма Лист",
   "item.nukacraft.raiders_helmet": "Рейдерский Капюшон",
   "item.nukacraft.raiders_body": "Рейдерская Кираса",
   "item.nukacraft.raiders_leggins": "Рейдерские Штаны",
   "item.nukacraft.raiders_boots": "Рейдерские Ботинки",
-  "block.nukacraft.gbloodleaf": "Куст Гамма Листа",
   "item.nukacraft.starlight_berry": "Ягода Ночного Ползуна",
   "item.nukacraft.neutron_rod": "Нейтронный Стручок",
   "block.nukacraft.qbloodleaf": "Куст Квантового Листа",
   "item.nukacraft.nuka_frutti": "Ядер Фрутти",
   "block.nukacraft.copper_block": "Медный Блок",
   "tooltip.nukacraft.regen": "§9Регенерация ",
-  "item.nukacraft.applesp": "Наливные яблоки",
+  "item.nukacraft.dandy_boy_apples": "Наливные яблоки",
   "item.nukacraft.aster_tea": "Чай с Астрой",
   "item.nukacraft.cram": "Готовый завтрак",
   "item.nukacraft.chips": "Картофельные Чипсы",
   "item.nukacraft.pures": "Пюре быстрого приготовления",
-  "item.nukacraft.cottoncandy": "Сахарная вата",
-  "item.nukacraft.bubbleapple": "Жвачка с Яблоком",
+  "item.nukacraft.cotton_candy": "Сахарная вата",
+  "item.nukacraft.bubble_apple": "Жвачка с Яблоком",
   "item.nukacraft.watercola": "Бутылка Воды",
   "tooltip.nukacraft.jumpboost" : "§9Прыгучесть ",
-  "item.nukacraft.fcakes": "Кексы «Весёлые ребята»",
-  "item.nukacraft.maccheese": "Макароны с сыром «Бламко»",
+  "item.nukacraft.cakes": "Кексы «Весёлые ребята»",
+  "item.nukacraft.blamco": "Макароны с сыром «Бламко»",
   "item.nukacraft.sweet_aster_tea": "Сладкий Чай с Астрой",
   "item.nukacraft.ash_tea": "Чай с Пепельной Розой",
   "item.nukacraft.xander_root": "Корень Сандер",
@@ -489,7 +495,7 @@
   "item.nukacraft.sweet_ash_tea": "Сладкий Чай с Пепельной Розой",
   "item.nukacraft.thistle_tea": "Чай с Чертополохом",
   "item.nukacraft.soot_tea": "Чай с Грязноцветом",
-  "item.nukacraft.vegsoup": "Овощной суп",
+  "item.nukacraft.vegetable_soup": "Овощной суп",
   "item.nukacraft.tato_salad": "Салат из Тошки",
   "item.nukacraft.silt_soup": "Илофасолевый Суп",
   "effect.nukacraft.health": "§9Здоровье ",
