--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -391,6 +391,21 @@
   "block.nukacraft.vtcrate1": "Vault-Tec Crate",
   "block.nukacraft.vtcrate2": "Overseer Crate",
   "block.nukacraft.redlight": "Red Lamp",
+  "block.nukacraft.vtdinner_chair": "Dinner Chair Vault-Tec",
+  "block.nukacraft.shower_tap": "Shower Tap",
+  "block.nukacraft.table_lamp": "Table Lamp",
+  "block.nukacraft.army_theatre_chair": "Army Theatre Chair",
+  "block.nukacraft.washbasin": "Wash Basin",
+  "block.nukacraft.bath_table": "Bath Table",
+  "block.nukacraft.steel_shelf": "Steel Shelf",
+  "block.nukacraft.vaultgen_block1": "Vault Generator Block",
+  "block.nukacraft.vaultgen_block2": "Vault Generator Block",
+  "block.nukacraft.tesla_block": "Tesla Column",
+  "block.nukacraft.tesla_column": "Tesla Column",
+  "block.nukacraft.nuc_stat_control": "Nuclear Generator",
+  "block.nukacraft.nuc_stat_block": "Nuclear Generator",
+  "block.nukacraft.cryocapsule": "Cryocapsule",
+  "block.nukacraft.door_cage": "Door Cage",
   "block.nukacraft.crackedwhitebricks": "Cracked White Bricks",
   "block.nukacraft.rusty_pipe": "Rust Pipe",
   "block.nukacraft.wasteland_terminal": "Wasteland Terminal",
