--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -322,6 +322,21 @@
   "block.nukacraft.scrapmetall": "Блок Металлолома",
   "block.nukacraft.rusttiresblock": "Стальная Клетка",
   "block.nukacraft.door_store": "Дверь Магазина",
+  "block.nukacraft.vtdinner_chair": "Стул Столовой Убежища",
+  "block.nukacraft.shower_tap": "Кран Душевой",
+  "block.nukacraft.table_lamp": "Настольная Лампа",
+  "block.nukacraft.army_theatre_chair": "Сиденье Армейского Театра",
+  "block.nukacraft.washbasin": "Умывальник",
+  "block.nukacraft.bath_table": "Туалетный Столик",
+  "block.nukacraft.steel_shelf": "Стальная Полка",
+  "block.nukacraft.vaultgen_block1": "Генератор Убежища",
+  "block.nukacraft.vaultgen_block2": "Генератор Убежища",
+  "block.nukacraft.tesla_block": "Тесла Колонна",
+  "block.nukacraft.tesla_column": "Тесла Колонна",
+  "block.nukacraft.nuc_stat_control": "Ядерный Генератор",
+  "block.nukacraft.nuc_stat_block": "Ядерный Генератор",
+  "block.nukacraft.cryocapsule": "Криокапсула",
+  "block.nukacraft.door_cage": "Дверь Клетки",
   "block.nukacraft.door_hardened": "Крепкая Дверь",
   "block.nukacraft.gray_tile": "Серая Плитка",
   "block.nukacraft.whitesteel_column": "Белая Стальная Колона",
