--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -11,6 +11,30 @@
   "item.nukacraft.advmag": "Advanced Magnet",
   "item.nukacraft.aimproccesor": "Circuit Board",
   "item.nukacraft.antisept": "Antiseptic",
+  "item.nukacraft.security_baton": "Baton",
+  "item.nukacraft.poolcue": "Pool Cue",
+  "item.nukacraft.hammer": "Sledgehammer",
+  "item.nukacraft.jethammer": "Super Sledgehammer",
+  "item.nukacraft.atom": "§6Atom's Judgement★★★",
+  "item.nukacraft.wrench": "Wrench",
+  "item.nukacraft.shiv": "Shiv",
+  "item.nukacraft.boxer": "Box Gauntlet",
+  "item.nukacraft.rollpin": "Rolling Pin",
+  "item.nukacraft.cane": "Cane",
+  "item.nukacraft.baseball_bat": "Baseball Bat",
+  "item.nukacraft.cito_bat": "§6Jet Bat★★★",
+  "item.nukacraft.komi": "Commie Whacker",
+  "item.nukacraft.crowbar": "Crowbar",
+  "item.nukacraft.crusher": "Crusher",
+  "item.nukacraft.golfdriver": "Golf Driver",
+  "item.nukacraft.razorblade": "Razor Blade",
+  "item.nukacraft.hatchet": "Hatchet",
+  "item.nukacraft.fireaxe": "Fire Axe",
+  "item.nukacraft.machete": "Machete",
+  "item.nukacraft.liberator": "Liberator",
+  "item.nukacraft.katana": "Katana",
+  "item.nukacraft.nukabreak": "§cNuka-Break★★",
+  "item.nukacraft.pipe_wrench": "Pipe Wrench",
   "item.nukacraft.resin_glow": "Glowing Resin",
   "item.nukacraft.gloam_sap": "Gloam Sap",
   "item.nukacraft.alumicond": "Aluminium Radiator",
