--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -12,6 +12,8 @@
   "block.nukacraft.redlight": "Красная Лампа",
   "item.nukacraft.resin_glow": "Светящаяся Смола",
   "item.nukacraft.gloam_sap": "Тёмный Сок",
+  "item.nukacraft.security_baton": "Прут",
+  "item.nukacraft.poolcue": "Кий",
   "block.nukacraft.cryocapsuleact": "Пустая Криокапсула",
   "block.nukacraft.opencryocapsule": "Открытая Криокапсула",
   "block.nukacraft.bogpad_item": "Болотный Мусор",
@@ -202,6 +204,28 @@
   "item.nukacraft.round50": ".50 Патрон",
   "item.nukacraft.round380": ".380 Патрон",
   "item.nukacraft.round556": "Патрон 5.56",
+  "item.nukacraft.wrench": "Гаечный Ключ",
+  "item.nukacraft.shiv": "Шило",
+  "item.nukacraft.boxer": "Боксёрская Перчатка",
+  "item.nukacraft.rollpin": "Скалка",
+  "item.nukacraft.cane": "Трость",
+  "item.nukacraft.baseball_bat": "Бита",
+  "item.nukacraft.cito_bat": "§6Реактивная Бита★★★",
+  "item.nukacraft.komi": "Молот для Комми",
+  "item.nukacraft.crowbar": "Ломик",
+  "item.nukacraft.crusher": "Крушитель",
+  "item.nukacraft.golfdriver": "Клюшка",
+  "item.nukacraft.razorblade": "Лезвие Бритвы",
+  "item.nukacraft.hatchet": "Топорик",
+  "item.nukacraft.fireaxe": "Пожарный Топор",
+  "item.nukacraft.machete": "Мачете",
+  "item.nukacraft.liberator": "Освободитель",
+  "item.nukacraft.katana": "Катана",
+  "item.nukacraft.nukabreak": "§cЯдер-Перерыв★★",
+  "item.nukacraft.pipe_wrench": "Газовый Ключ",
+  "item.nukacraft.hammer": "Кувалда",
+  "item.nukacraft.jethammer": "Суперкувалда",
+  "item.nukacraft.atom": "§6Атомное Правосудие★★★",
   "item.nukacraft.shotshell": "Патрон Дробовика",
   "item.nukacraft.fatman": "§cТолстяк★★",
   "item.nukacraft.mini_nuke": "§cЯдерный Минизаряд★★",
