--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -682,20 +682,14 @@
 
   "key.open_map": "Open map",
 
-
-
-
   "painting.nukacraft.nukacola.title": "Nuka-Cola Promo",
   "painting.nukacraft.quantcola.title": "Quant Nuka-Cola Promo",
   "painting.nukacraft.sugar_bomb_promo.title": "Sugar Bombs Promo",
 
-
-
-
-
   "skin.default" : "§7§oDefault",
   "skin.rust" : "§7§oRusty",
   "itemGroup.power_armor": "NukaCraft: Power Armor",
+  "generator.nukacraft.fallout_wasteland": "Wasteland",
 
   "entity.nukacraft.power_armor_frame": ""
 }
