--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -440,6 +440,7 @@
   "block.nukacraft.radioterminal": "Communications Terminal",
   "block.nukacraft.shelter_bars": "Vault-Tec Bars",
   "block.nukacraft.armedglass": "Armed Glass Pane",
+  "block.nukacraft.garvellll": "§mGravel §r§dPreston Gravel",
   "block.nukacraft.irrad_beetroots": "Irradiated Beetroot Seeds",
   "block.nukacraft.whitebricks_slab": "White Brick Slab",
   "block.nukacraft.quarts_ore": "Quartz Ore",
