New Blocks, New Textures, New Items

--- a/src/main/resources/assets/nukacraft/lang/ru_ru.json
+++ b/src/main/resources/assets/nukacraft/lang/ru_ru.json
@@ -114,6 +114,7 @@
   "item.nukacraft.fusion_core": "Ядерный Блок",
   "item.nukacraft.combatpipe": "Свинцовый Стояк",
   "item.nukacraft.power_armor_frame": "§3Каркас Силовой Брони",
+  "item.nukacraft.saturnite_ingot": "Сатурнитовый Слиток",
   "item.nukacraft.jetpack": "Реактивный Ранец",
   "block.nukacraft.monorail": "Блок Монорельса",
   "item.nukacraft.t45_helmet": "Шлем T-45",
