--- a/src/main/resources/assets/nukacraft/lang/en_us.json
+++ b/src/main/resources/assets/nukacraft/lang/en_us.json
@@ -232,6 +232,7 @@
   "item.nukacraft.filter": "Water Filter",
   "item.nukacraft.stimpak": "Stimpak",
   "item.nukacraft.radaway": "Rad Away",
+  "item.nukacraft.saturnite_ingot": "Saturnite Ingot",
   "item.nukacraft.glowing_blood": "Glowing Blood",
   "item.nukacraft.gutshroom": "Gut Mushroom",
   "item.nukacraft.firemushroom": "Firemushroom",
